[package]
name = "mercado-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.4", features = ["csr"] }
leptos_router = { version = "0.5.4", features = ["csr"]}
leptos_meta = {version = "0.5.4", features = ["csr"]}
mercado = { path = "../mercado", features = ["client"], default-features = false }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Storage"]}
log = "0.4"
leptonic = { version = "0.3.0", features = ["csr"] }
time = "0.3.30"
leptos_icons = {version = "0.1.0", features= ["BsCheck", "BsX"]}

[build-dependencies]
leptonic-theme = "0.3.0"
leptos-tiptap-build = "0.2.4"

